--- a/Week04.qmd
+++ b/Week04.qmd
@@ -2,7 +2,7 @@
 title: "Week04"
 ---
 
-The lecture of the week has introduced several applications of remote sensing and their policy challenges. The following content will focus on Singapore Climate Action contributing to the thermal environment and the urban heat island (UHI) effect. Besides, I will explore how to apply remote sensing data to respond to Singapore's Climate Targets and their mitigation strategies. It is worth noting that the current methods based on remote sensing data are mainly limited to the monitoring and analysis of the real situation. How to use this data for prevention strategies still needs to be further studied.
+The week's lecture has introduced several remote sensing applications and their policy challenges. The following content will focus on Singapore Climate Action contributing to the thermal environment and the urban heat island (UHI) effect. Besides, I will explore how to apply remote sensing data to respond to Singapore's Climate Targets and their mitigation strategies. It is worth noting that the current methods based on remote sensing data are mainly limited to the monitoring and analysis of the real situation. How to use this data for prevention strategies still needs to be further studied.
 
 # 1.Content Summary: Policy Challenge {.unnumbered}
 
@@ -10,7 +10,7 @@ The lecture of the week has introduced several applications of remote sensing an
 
 Affected by major global climate changes caused by greenhouse gas emissions, Singapore's annual average temperature rose from 26.9°C to 28.0°C from 1980 to 2020; Moreover, by 2100, the temperature will rise by 1.4°C to 4.6°C due to the long-term effects of climate change (The National Climate Change Secretariat (NCCS), no date).
 
-However, the UHI effect exacerbates the problem of high temperatures and it is considered as one of the accumulated results of rapid urbanisation in Singapore(Borzino et al., 2020). Heat island effect is a phenomenon that urban areas have a higher temperature than the surrounding area (Oke,1982). The primary reasons for the UHI effect is the greater heat storage due to land use change from natural to impervious surface(Grimmond, 2007). Besides, With the rise in urban population, the increases of building density and human activities also create more energy consumption and greenhouse gas emissions(Zhang et al., 2021). In the terms of Singapore, daytime temperatures are around 0-2°C higher and night-time temperatures are around 2-4°C higher in urban areas compared to forested areas(Figure 1) (Urban Redevelopment Authority(URA),2023). The warmer climate has adverse impacts on biodiversity, public health, food security, energy consumption and other aspects, resulting in a unsustainable future in Singapore.
+However, the UHI effect exacerbates the problem of high temperatures and it is considered as one of the accumulated results of rapid urbanisation in Singapore(Borzino et al., 2020). the UHI effect is a phenomenon that urban areas have a higher temperature than the surrounding area (Oke,1982). The primary reason for the UHI effect is the greater heat storage due to land use change from natural to impervious surface(Grimmond, 2007). Besides, With the rise in urban population, the increases of building density and human activities also create more energy consumption and greenhouse gas emissions(Zhang et al., 2021). In terms of Singapore, daytime temperatures are around 0-2°C higher, and night-time temperatures are around 2-4°C higher in urban areas compared to forested areas(Figure 1) (Urban Redevelopment Authority(URA),2023). The warmer climate has adverse impacts on biodiversity, public health, food security, energy consumption and other aspects, resulting in an unsustainable future in Singapore.
 
 ![Figure 1 The urban heat island effect in Singapor. Picture source from [Cooling Singapore](https://www.tum-create.edu.sg/research/project/cooling-singapore)](source/week04/UHI01.png)
 
@@ -29,18 +29,18 @@ To achieve net zero emission by 2050 and sustainable development, Singapore has 
 
 **The Singapore Green Plan 2030**
 
-Launched in February 2021, The Singapore Green Plan 2030 has proposed 5 pillars for sustainable development, including City in Nature, Energy Reset, Sustainable Living, Green Economy and Resilient Future, indicated in Figure 2.
+Launched in February 2021, The Singapore Green Plan 2030 has proposed 5 pillars for sustainable development, including City in Nature, Energy Reset, Sustainable Living, Green Economy and Resilient Future, as indicated in Figure 2.
 
 ![Figure 2 The Content of Singapore Green Plan 2030. Picture source from [The Singapore Green Plan 2030](https://www.greenplan.gov.sg/cos/)](source/week04/cos-sgp-infographics.png)
 
-In the section of Resilient Future, Keeping Singapore cool is emphasised to mitigate the rise in urban heat, and the key strategies proposed by Ministry of Sustainability and the Environment and URA (no date) are as follows:
+In the section of Resilient Future, Keeping Singapore cool is emphasised to mitigate the rise in urban heat, and the key strategies proposed by the Ministry of Sustainability and the Environment and URA (no date) are as follows:
 
 -   **Understanding the UHI Effect**
 
     -   Deploying an island-wide network of climate sensors to collect data.
     -   Establishing models to simulate future climatic scenarios and the microclimates of built-up area.
 
--   **Conducting Research on the Effectiveness of UHI Mitigation Strategies**
+-   **Researching the Effectiveness of UHI Mitigation Strategies**
 
     -   The research projects, such as 'Cooling Singapore 2.0', will help policymakers to assess the effectiveness of various strategies to moderate the UHI effect.
 
@@ -56,17 +56,17 @@ In the section of Resilient Future, Keeping Singapore cool is emphasised to miti
 
 # 2.Application {.unnumbered}
 
-Earth observation data on UHI has been widely discussed and its application can provide vital information to understand and address the challenges posed by UHI. Corresponding to Singapore cooling strategy, the section will introduce the mitigation strategies related to remotely sensed data from two perspectives, namely urban morphology and building roofs.
+Earth observation data on UHI has been widely discussed, and its application can provide vital information to understand and address the challenges UHI poses. Corresponding to Singapore cooling strategy, the section will introduce the mitigation strategies related to remotely sensed data from two perspectives: urban morphology and building roofs.
 
 ## 2.1 Urban Morphology: Local Climate Zones (LCZs) {.unnumbered}
 
-The mitigation measures of UHI effect have been discussed with urban form. The Local climate zone (LCZ) introduced by Stewart and Oke(2012) provides a new classification system of urban structure,which can be applied to detect local climate changes. By using machine learning to identify and classify urban satellite images,LCZs are categorised into 17 classes, namely 10 urban classes and 7 natural classes (Figure 3). The classification criteria are diverse and can be adjusted according to the geographical characteristics of the study area. Based on the summary of Stewart and Oke(2012) the classification criteria mainly include 4 aspects, as shown in Figure 4.
+The mitigation measures of the UHI effect have been discussed in urban form. The Local climate zone (LCZ) introduced by Stewart and Oke(2012) provides a new classification system of urban structure, which can be applied to detect local climate changes. By using machine learning to identify and classify urban satellite images, LCZs are categorised into 17 classes, namely 10 urban classes and 7 natural classes (Figure 3). The classification criteria are diverse and can be adjusted according to the geographical characteristics of the study area. Based on the summary of Stewart and Oke(2012), the classification criteria mainly include 4 aspects, as shown in Figure 4.
 
 ![Figure 3 The Classification of Local Climate Zones (Source from Bechtel,et al.(2017) and Stewart and Oke(2012))](source/week04/LCZ_classification.jpg)
 
 ![Figure 4 The Classification Criteria of Local Climate Zones (Source from Stewart and Oke(2012))](source/week04/classification_criteria.png)
 
-The heat island effect on LCZs is mainly examined by combining the Land Surface Temperature(LST), which can be reflected in the research of authors Yang et al.(2021) and Xu et al.(2022). Initially, remote sensing data were distinguished using classification indicators, and machine learning methods were applied for supervised classification of remote sensing images to discern various categories of Local Climate Zones (LCZs) （Figure 5). Subsequently, the authors acquired LST data through processing remote sensing dataset and analysed the differentiated LST displayed by different types of LCZs.
+The heat island effect on LCZs is mainly examined by combining the Land Surface Temperature(LST), which can be reflected in the research of authors Yang et al.(2021) and Xu et al.(2022). Initially, remote sensing data were distinguished using classification indicators, and machine learning methods were applied for supervised classification of remote sensing images to discern various categories of Local Climate Zones (LCZs) （Figure 5). Subsequently, the authors acquired LST data through processing the remote sensing dataset and analysed the differentiated LST displayed by different types of LCZs.
 
 ![Figure 5 The RS-based LCZs Map of Guangzhou City (Source from Xu et al.(2022))](source/week04/RS_Based_LCZ.png)
 
@@ -74,11 +74,11 @@ Based on the analysis of summer average LST in Liaoning Province, China (Figure 
 
 ![Figure 6 The LCZs box plot with LST in Liaoning Province,China, 2017 and 2019(Source from Yang et al.(2021))](source/week04/Box_plots.png)
 
-To promote green town programmes, Singapore can adopt LCZs to identify the urban morphology with higher and lower thermal impact and conduct urban regeneration. Moreover, the LCZs method can also be applied to long-term monitoring for seasons, which can further propose prevention strategies for thermal impacts.
+To promote green town programmes, Singapore can adopt LCZs to identify the urban morphology with higher and lower thermal impact and conduct urban regeneration. Moreover, the LCZs method can also be applied to long-term seasonal monitoring, which can further propose prevention strategies for thermal impacts.
 
 ## 2.2 "Cooling" Roofs {.unnumbered}
 
-Given the high density and urbanisation rate in Singapore, making significant changes to the existing built environment is challenging. Thus, the adoption of "cooling" roofs has been recognized as a crucial strategy to address UHI effect in Singapore. Considering the significant influence of surface albedo on UHI, some scholars have explored solar reflective materials to alleviate this phenomenon (Despini et al., 2021). Using LANDSAT images of Chicago to compare albedo and Normalised difference vegetation index (NDVI), Mackey, Lee and Smith (2012) suggested that the reflective roofs show a more effective cooling effect than green items, such as green roofs, green spaces, and street trees. Besides, Taking the Municipality of Modena as a study area, Despini et al.( 2020) employed WorldView-3 (WV3) satellite images to obtain Surface Reflectance (SR) to calculate the average SR of different urban surfaces (Figure 7). Based on scenario predictions, the authors mentioned that the average temperature decreases by 1.2°C when cool materials on building roofs and cool coloured coatings on streets and parkings are applied.
+Given the high density and urbanisation rate in Singapore, making significant changes to the existing built environment is challenging. Thus, the adoption of "cooling" roofs has been recognized as a crucial strategy to address the UHI effect in Singapore. Considering the significant influence of surface albedo on UHI, some scholars have explored solar reflective materials to alleviate this phenomenon (Despini et al., 2021). Using LANDSAT images of Chicago to compare albedo and Normalised difference vegetation index (NDVI), Mackey, Lee and Smith (2012) suggested that reflective roofs show a more effective cooling effect than green items, such as green roofs, green spaces, and street trees. Besides, Taking the Municipality of Modena as a study area, Despini et al.( 2020) employed WorldView-3 (WV3) satellite images to obtain Surface Reflectance (SR) to calculate the average SR of different urban surfaces (Figure 1). Based on scenario predictions, the authors mentioned that the average temperature decreases by 1.2°C when cool materials on building roofs and cool coloured coatings on streets and parkings are applied.
 
 ![Figure7 The example of RGB images (left) and Albedo images(right) in Modena (source form Despini et al. (2021)](source/week04/application_2_0.jpg)
 
@@ -90,17 +90,19 @@ Moreover, Mushore, Odindi and Mutanga (2022) examine the colour of roof coating 
 
 ## 3.1 Linking to national policy, global agendas and goals {.unnumbered}
 
-In this Chapter, I have studied the UHI challenges and policies in Singapore, and have proposed two approaches to achieving policy goals from the perspective of remote sensing data, namely Urban Morphology (LCZs) and "Cooling" Roofs. The studies of urban morphology (LCZs) can monitor the thermal environment and support HDB Green Towns programmes, contributing to sustainable urban regeneration in the future. Given Singapore's high-density built-up areas, it is difficult to adopt a large-scale strategy. Thus, "Cooling" roofs, as an "acupuncture" strategy, can effectively mitigate the local thermal environment, and reduce building temperature and energy consumption. Overall, these two strategies solve the UHI effect from different urban scales, and effective application and deployment are conducive to achieving "Cooling" Singapore.
+In this Chapter, I have studied the UHI challenges and policies in Singapore, and have proposed two approaches to achieving policy goals from the perspective of remote sensing data: Urban Morphology (LCZ) and "Cooling" Roofs. The studies of urban morphology (LCZ) can monitor the thermal environment and support HDB Green Towns programmes, contributing to sustainable urban regeneration in the future. Given Singapore's high-density built-up areas, it is challenging to adopt a large-scale strategy. Thus, “Cooling” roofs, as an "acupuncture" strategy, can effectively mitigate the local thermal environment and reduce building temperature and energy consumption. These two strategies solve the UHI effect from different urban scales, and practical application and deployment are conducive to achieving “Cooling” Singapore.
 
 Regarding global agendas and goals, the policy and strategies effectively respond to the 2015 Paris Agreement. Moreover, In terms of Sustainable Development Goals (SDG) proposed by the United Nations(UN), the efforts of strategies can be reflected in SDG11 and SDG12 (Figure 9).
 
 <br/> **SDGs11**:Sustainable Cities and Communities. <br/> Make cities and human settlements inclusive, safe, resilient and sustainable. <br/> **SDGs13**: Climate Action. <br/> Take urgent action to combat climate change and its impact.
 
+The two applications of remote sensing data not only provide valuable experience for "Cooling" Singapore, but also have the potential for global promotion, providing helpful experience for global climate change response. 
+
 ![Figure 9 In support of SDGs 11 and SDG 13](source/week04/SDG11_13.png)
 
 ## 3.2 Personal Reflection {.unnumbered}
 
-Remote sensing data plays a key role in policy development in Singapore to address the urban heat island effect in Singapore. However, we must acknowledge its limitations, primarily confined to monitoring and analysing current situations, while preventative strategies require further in-depth research. Both applications discussed UHI through LST in different types of built environments; however, Chakraborty et al.(2022) pointed out that LST obtained from satellites exhibits limited correlations with air temperature. Therefore, it is crucial to integrate remote sensing data with other data from diverse sources, such as integrating real-time temperature data with remotely sensed built environment data. This integration can drive technological innovation, allowing for a more comprehensive and effective approach to climate studies.
+Remote sensing data plays a key role in policy development in Singapore to address the UHI effect. However, we must acknowledge its limitations, primarily confined to monitoring and analysing current situations, while preventative strategies require further in-depth research. Both applications discussed UHI through LST in different types of built environments; however, Chakraborty et al. (2022) pointed out that LST obtained from satellites exhibits limited correlations with air temperature. Therefore, it is crucial to integrate remote sensing data with other data from diverse sources, such as integrating real-time temperature data with remotely sensed built environment data. This integration can drive technological innovation, allowing for a more comprehensive and effective approach to climate studies.
 
 Thus, these challenges highlight the need for continuous learning and innovation in remote sensing applications to ensure that these applications can adapt to changing climate conditions and drive more comprehensive, sustainable solutions.
 
